Modifiche generali di integrazione

--- a/doc/PianoDiProgetto/PianoDiProgetto.tex
+++ b/doc/PianoDiProgetto/PianoDiProgetto.tex
@@ -148,6 +148,9 @@ Il presente documento descrive l'analisi dei costi e delle risorse effettuata da
 %%%%%%%%%%%%%%FINE INTESTAZIONE COLONNE%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 		 \hline
 %%%%%%%%%%% PARTE DA MODIFICARE %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+            \hline
+            2.1 & 13$\slash$12$\slash$2008    Modifiche post integrazione  & Rizzo Maurizio \\
+            \hline
 			2.0 & 23/01/2009	Verifica in preparazione al rilascio & Bizzotto Piero \\
 			\hline
 			1.2 & 21/01/2009	Aggiunta consuntivi fase RR-RPP & Bizzotto Piero \\
@@ -219,6 +222,8 @@ I ruoli saranno assegnati a rotazione nell'arco dello sviluppo del progetto, in 
 		\hline
 		Geremia Mirco & 15-10-2008 & \\
 		\hline
+		Rizzo Maurizio & 7-1-2009 & \\
+		\hline
 		\end{tabular}
 	\caption{Accettazione} 
 	\label{tabella_accettazione}
@@ -248,6 +253,8 @@ I ruoli saranno assegnati a rotazione nell'arco dello sviluppo del progetto, in 
 		\hline
 		Geremia Mirco & 563665 & crittico@gmail.com\\
 		\hline
+		Rizzo Maurizio & 479720 & clue.manari@gmail.com\\
+		\hline
 		\end{tabular}
 	\caption{Descrizione dei Componenti} 
 	\label{tab:tabella_componenti}
@@ -257,9 +264,9 @@ I ruoli saranno assegnati a rotazione nell'arco dello sviluppo del progetto, in 
 
 \subsezione{Assunzioni Iniziali}
 \begin{itemize}
-\item Il costo totale stimato \`e di 13059 euro. Eventuali costi aggiuntivi non saranno a carico del committente ma saranno coperti dall'azienda.
-\item Sono previste 630 ore di lavoro totali per la realizzazione del progetto.
-\item L'impegno individuale di ogni componente varia da un minimo di 85 ore ad un massimo di 105 ore.
+\item Il costo totale stimato \`e di 13790 euro. Eventuali costi aggiuntivi non saranno a carico del committente ma saranno coperti dall'azienda.
+\item Sono previste 667 ore di lavoro totali per la realizzazione del progetto.
+\item L'impegno individuale di ogni componente varia da un minimo di 90 ore ad un massimo di 100 ore.
 \end{itemize}
 
 
@@ -286,14 +293,14 @@ In questa sottosezione verr\` a illustrato il preventivo totale, comprendente i 
 		 \hline 
 		 \textbf{Ruolo} & \textbf{Ore di lavoro} & \textbf{Costo in euro}\\
 		 \hline
-		Responsabile & 69 & 2070 \\
-		Amministratore & 93 & 1860\\
-		Analista & 93 & 2325\\
-		Progettista & 134 & 2948\\
-		Programmatore & 90 & 1440 \\
-		Verificatore & 151 & 2416\\
+		RResponsabile & 71 & 2130 \\
+		Amministratore & 97 & 1940\\
+		Analista & 98 & 2450\\
+		Progettista & 144 & 3168\\
+		Programmatore & 96 & 1536 \\
+		Verificatore & 161 & 2576\\
         \hline
-        \textbf{Totale} & \textbf{630} & \textbf{13059}\\
+        \textbf{Totale} & \textbf{667} & \textbf{13790}\\
 		\hline
 		\end{tabular}
 	\caption{Preventivo totale} 
@@ -322,12 +329,12 @@ Preventivo relativo alla fase Revisione dei requisiti-Revisione del progetto pre
 		 \hline
 		Responsabile & 25 & 750 \\
 		Amministratore & 40 & 800\\
-		Analista & 73 & 1825\\
-		Progettista & 50 & 1100\\
+		Analista & 74 & 1850\\
+		Progettista & 55 & 1210\\
 		Programmatore & 0 & 0 \\
-		Verificatore & 35 & 560\\
+		Verificatore & 38 & 608\\
         \hline
-        \textbf{Totale} & \textbf{223} & \textbf{5035}\\
+        \textbf{Totale} & \textbf{232} & \textbf{5218}\\
 		\hline
 		\end{tabular}
 	\caption{Preventivo RR-RPP} 
@@ -356,14 +363,14 @@ Preventivo relativo alla fase Revisione del progetto preliminare-Revisione di qu
 		 \hline 
 		 \textbf{Ruolo} & \textbf{Ore di lavoro} & \textbf{Costo in euro}\\
 		 \hline
-		Responsabile & 32 & 960 \\
-		Amministratore & 35 & 700\\
-		Analista & 20 & 500\\
-		Progettista & 84 & 1848\\
-		Programmatore & 90 & 1440 \\
-		Verificatore & 101 & 1616\\
+		Responsabile & 33 & 990 \\
+		Amministratore & 37 & 740\\
+		Analista & 24 & 600\\
+		Progettista & 89 & 1958\\
+		Programmatore & 94 & 1504 \\
+		Verificatore & 105 & 1680\\
         \hline
-        \textbf{Totale} & \textbf{362} & \textbf{7064}\\
+        \textbf{Totale} & \textbf{382} & \textbf{7472}\\
 		\hline
 		\end{tabular}
 	\caption{Preventivo RPP-RQ} 
@@ -390,14 +397,14 @@ Preventivo relativo alla fase Revisione di qualifica-Revisione di accettazione.
 		 \hline 
 		 \textbf{Ruolo} & \textbf{Ore di lavoro} & \textbf{Costo in euro}\\
 		 \hline
-		Responsabile & 12 & 360 \\
-		Amministratore & 18 & 360\\
+		Responsabile & 13 & 380 \\
+		Amministratore & 28 & 400\\
 		Analista & 0 & 0\\
 		Progettista & 0 & 0\\
-		Programmatore & 0 & 0 \\
-		Verificatore & 15 & 240\\
+		Programmatore & 2 & 32 \\
+		Verificatore & 18 & 288\\
         \hline
-        \textbf{Totale} & \textbf{45} & \textbf{960}\\
+        \textbf{Totale} & \textbf{53} & \textbf{1090}\\
 		\hline
 		\end{tabular}
 	\caption{Preventivo RQ-RA} 
@@ -472,6 +479,8 @@ Per conoscenza del cliente, \`e fornita anche una stima approssimativa dell'impi
 			\hline
 			Geremia Mirco & Resp.-Amm.-Analis.-Verif.  & Progett.-Program.  \\
 			\hline
+			Rizzo Maurizio & Analis.-Progett.-Verif. & Resp.-Amm.-Program. \\
+			\hline
 
 %%%%%%%%%%% FINE PARTE DA MODIFICARE %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 		\end{tabular}
@@ -494,17 +503,19 @@ Per conoscenza del cliente, \`e fornita anche una stima approssimativa dell'impi
 			\hline
 %%%%%%%%%%%%%%FINE INTESTAZIONE COLONNE%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 								     % RQ-RA % 
-			Bizzotto Piero & -   \\
+			Bizzotto Piero & Resp.-Amm.   \\
 			\hline
-			Carollo Mirko & -   \\
+			Carollo Mirko & Verif.   \\
 			\hline
 			Cunico Marco & Verif.-Amm.   \\
 			\hline
-			Dal Bosco Davide & -   \\
+			Dal Bosco Davide & Amm.   \\
 			\hline
-			Dissegna Stefano & Verif.-Amm.   \\
+			Dissegna Stefano & Resp.   \\
 			\hline
-			Geremia Mirco & Resp.   \\
+			Geremia Mirco & Verif.   \\
+			\hline
+            Rizzo Maurizio  & Verif.\\
 			\hline
 
 %%%%%%%%%%% FINE PARTE DA MODIFICARE %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -532,18 +543,20 @@ Per conoscenza del cliente, \`e fornita anche una stima approssimativa dell'impi
 			\hline
 %%%%%%%%%%%%%%FINE INTESTAZIONE COLONNE%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 								     %  RESP    % AMMIN  %  ANALISTA  %  PROGET. %  PROGRAM %    VERIF.   % TOTALE
-			Bizzotto Piero &  11   &  15 &  10   &   25  &  11   &  33  &  105 \\ % R4
+			Bizzotto Piero       &  10   &  13  &  10   &   23  &  12   &  28   &  96\\ % R4
 			\hline
-			Carollo Mirko &  12   &  15  &  10  &  25   &  9   &  34   &  105\\ % R5
+			Carollo Mirko        &  10   &  13  &  10   &   22  &  12   &  29  &  96\\ % R5
 			\hline
-			Cunico Marco    &  11   &  20  &  23   &  24   &  20   &  7   &  105\\ % R2
+			Cunico Marco         &  10   &  19  &  21   &   20  &  18   &  7  &   95\\ % R2
 			\hline
-			Dal Bosco Davide        &  10   &  15   &  10   &  21   &   15  &  34  &  105\\ % R1
+			Dal Bosco Davide     &  10   &  14  &  10   &   21  &  11   &  29  &  95\\ % R1
 			\hline
-			Dissegna Stefano        &  11  &  18   & 22  &  26   &  20  &  8  &  105\\ % R6
+			Dissegna Stefano     &  10   &  15  &  20   &   24  &  18   &  9  &  96\\ % R6
 			\hline
-			Geremia Mirco   &   14  &  10   &  18   &  13  &  15   &  35   &  105\\ % R7
+			Geremia Mirco        &  11   &  10  &  17   &   14  &  13   &  30  &  95\\ % R7
 			\hline		
+			Rizzo Maurizio       &  10   &  14  &  10   &   20  &  12   &  29  &  95\\
+			\hline
 %%%%%%%%%%% FINE PARTE DA MODIFICARE %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 		\end{tabular}
 	\caption{Preventivo carico persona in ore} %INSERIRE DIDASCALIA - SE NECESSARIA - 
@@ -559,14 +572,14 @@ Per conoscenza del cliente, \`e fornita anche una stima approssimativa dell'impi
 		 \hline 
 		 \textbf{Ruolo} & \textbf{Ore di lavoro} & \textbf{Costo in euro}\\
 		 \hline
-		Responsabile & 16 & 480 \\
-		Amministratore & 43 & 860\\
-		Analista & 81 & 2025\\
+		Responsabile & 18 & 520 \\
+		Amministratore & 44 & 880\\
+		Analista & 86 & 2125\\
 		Progettista & 39 & 858\\
 		Programmatore & 0 & 0 \\
-		Verificatore & 26 & 416\\
+		Verificatore & 28 & 448\\
         \hline
-        \textbf{Totale} & \textbf{205} & \textbf{4639}\\
+        \textbf{Totale} & \textbf{215} & \textbf{4831}\\
 		\hline
 		\end{tabular}
 	\caption{Consuntivo RR-RPP} 
@@ -609,7 +622,9 @@ Per conoscenza del cliente, \`e fornita anche una stima approssimativa dell'impi
 			Dissegna Stefano        &  0  &  0   & 27  &  0   &  0  &  0  &  27\\ % R6
 			\hline
 			Geremia Mirco   &   2  &  6   &  13  &  0  &  0   &  26   &  47\\ % R7
-			\hline		
+			\hline	
+			Rizzo Maurizio  &  0  &  0  &  20  &  10  &  0  &  15  &  45 \\ %R3
+			\hline	
 %%%%%%%%%%% FINE PARTE DA MODIFICARE %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 		\end{tabular}
 	\caption{Consuntivo carico/persona RR-RPP} %INSERIRE DIDASCALIA - SE NECESSARIA - 
@@ -637,7 +652,7 @@ I punti di rischio da noi identificati e valutati sono i seguenti:
 \item \textbf{Pianificazione e distribuzione dei ruoli}\\
 Un punto fondamentale al quale bisogna prestare molta attenzione \`e la suddivisione dei ruoli e la sua gestione. Ogni componente dovr\`a assumere tutti i ruoli durante le varie fasi di progetto. Questo pu\`o portare ad una scarsa specializzazione dei membri dell'azienda, ma si tratta di un vincolo didattico indispensabile.
 \item \textbf{Mancanza del personale}\\
-Essendo l'azienda composta da sei membri, nell'eventualit\`a che uno di questi non possa pi\`u partecipare alle attivit\`a di progetto, c'\`e un possibile rischio che l'azienda abbia un numero insufficiente di persone per continuare il lavoro sotto le ipotesi e le stime preventivate. In questo caso, l'azienda WebShape porter\`a comunque a termine il suo lavoro.
+Essendo l'azienda composta da sette membri, nell'eventualit\`a che uno di questi non possa pi\`u partecipare alle attivit\`a di progetto, c'\`e comunque la possibilit\'a che l'azienda abbia un numero sufficiente di persone per continuare il lavoro sotto le ipotesi e le stime preventivate. In tutti gli altri possibili caso, l'azienda WebShape porter\`a comunque a termine il suo lavoro.
 \item \textbf{Compatibilit\`a e portabilit\`a del prodotto}\\
 Il prodotto finale, come da Requisiti, dovr\`a risultare funzionante sui pi\`u moderni {\underline{browser}} in circolazione. Questo fatto \`e per\`o  a discrezione dell'utente finale, il quale deve essere consapevole della non retrocompatibilit\`a del prodotto, e quindi anche la portabilit\`a risulta essere  a sua discrezione.
 \item \textbf{Funzionalit\`a del prodotto}\\
